--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -219,8 +219,50 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\chapter*{Preface}\label{preface}
-\addcontentsline{toc}{chapter}{Preface}
+\chapter*{Abstract}\label{abstract}
+\addcontentsline{toc}{chapter}{Abstract}
+
+The DNA of the human genome has a total length of 2 meters, but is
+folded to fit in each cell's nucleus with a size of around 10 nm.
+Chromosome conformation capture experiments coupled with high-throughput
+sequencing (Hi-C) allow to measure DNA-DNA contacts genome-wide and
+reviled a highly organized hierarchy of three-dimensional genome
+organization. Chromosomes fold locally into domains of several kb termed
+topologically associating domains (TADs) which restrict the interactions
+of gene regulatory regions, such as enhancers, and target genes.
+
+In this theses, diverse genomic data sets are computationally integrated
+with genome-wide chromatin interaction maps to analyse the function of
+TADs for gene regulation during evolution and in disease genomes.
+
+More specifically, I show that duplicated gene pairs are enriched for
+co-localization in the same TAD, share more often common enhancer
+elements than expected and have increased contact frequencies over large
+genomic distances. The clustering in the three-demensional genome
+architecture enables concerted expression over diverse cell-types and
+indicate evolutionary constraints in functional genome organization.
+Indeed, by analyzing evolutionary rearrangements between human and
+diverse mammal species, I show that TADs are highly conserved building
+blocks of genomes across millions years of evolution and that
+rearrangements of TADs is associated to changes in gene expression.
+
+Furthermore, we asked whether disruption of TADs can also lead to
+genetic disease. By analyzing balanced chromosomal rearrangements in
+whole-genome sequenced patients with diverse genetic syndromes, we can
+associate the effect mechanism of rearrangements to disruption of TAD
+that lead to altered gene expression of phenotypically relevant genes.
+
+Finally, I present a computational tool, 7C, to predict long-range
+chromatin interactions by largely available ChIP-seq data. This enables
+the analysis of genome folding in many diverse tissues and conditions.
+
+Together, these results show that TADs are important structural and
+functional units of genomes and TAD disrutpion is associated altered
+gene regulation during evolution and in disease. Therefore, it will be
+increasingly important to take the three-dimensional folding structure
+of genomes into account to interpret genomic variations in genetic
+disease and cancer genomes to ultimately improve genetic diagnoses in
+clinical practice and treatment development.
 
 \chapter{Introduction}\label{introduction}
 
@@ -786,6 +828,31 @@ This chapter is published in Nucleac Acid Research
 \citep{Ibn-Salem2017}. The surce code for the complete analysis is
 available at GitHub:
 \url{https://github.com/ibn-salem/paralog_regulation}
+
+\section*{Abstract}\label{abstract-1}
+\addcontentsline{toc}{section}{Abstract}
+
+Paralog genes arise from gene duplication events during evolution, which
+often lead to similar proteins that cooperate in common pathways and in
+protein complexes. Consequently, paralogs show correlation in gene
+expression whereby the mechanisms of co-regulation remain unclear. In
+eukaryotes, genes are regulated in part by distal enhancer elements
+through looping interactions with gene promoters. These looping
+interactions can be measured by genome-wide chromatin conformation
+capture (Hi-C) experiments, which revealed self-interacting regions
+called topologically associating domains (TADs). We hypothesize that
+paralogs share common regulatory mechanisms to enable coordinated
+expression according to TADs. To test this hypothesis, we integrated
+paralogy annotations with human gene expression data in diverse tissues,
+genome-wide enhancer--promoter associations and Hi-C experiments in
+human, mouse and dog genomes. We show that paralog gene pairs are
+enriched for co-localization in the same TAD, share more often common
+enhancer elements than expected and have increased contact frequencies
+over large genomic distances. Combined, our results indicate that
+paralogs share common regulatory mechanisms and cluster not only in the
+linear genome but also in the three-dimensional chromatin architecture.
+This enables concerted expression of paralogs over diverse cell-types
+and indicate evolutionary constraints in functional genome organization.
 
 \section{Introduction}\label{introduction}
 
@@ -1711,7 +1778,7 @@ Mainz, 55128 Mainz, Germany
 
 \url{https://doi.org/10.1101/231431}
 
-\subsection*{Abstract}\label{abstract}
+\subsection*{Abstract}\label{abstract-2}
 \addcontentsline{toc}{subsection}{Abstract}
 
 \textbf{Background:} The human genome is highly organized in the
